--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
