--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "websocket": "^1.0.34"
